[project]
name = "pyscout"
version = "0.1.0"
description = "lightweight python recon toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "azmogoo" }]
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
pyscout = "pyscout.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyscout*"]
